Explicit preinstall and fixes
- explicitly distinguish between AMI-preinstalled subject version vars and
  override version vars
- separate test subject names list file and preinstalled test subject
  versions (so bin/meta works)
- minor corrections and bug fixes at bin/test
- upgrade bin/build-ami info putput
- do not preinstall vector into an AMI

--- a/ansible/roles/subjects/templates/subjects.fact.j2
+++ b/ansible/roles/subjects/templates/subjects.fact.j2
@@ -1,20 +1,17 @@
 [filebeat]
-version={{ filebeat_version }}
+preinstalled_version={{ preinstalled_filebeat_version }}
 
 [fluentbit]
-version={{ fluentbit_version }}
+preinstalled_version={{ preinstalled_fluentbit_version }}
 
 [fluentd]
-version={{ fluentd_version }}
+preinstalled_version={{ preinstalled_fluentd_version }}
 
 [logstash]
-version={{ logstash_version }}
+preinstalled_version={{ preinstalled_logstash_version }}
 
 [splunk_heavy_forwarder]
-version={{ splunk_heavy_forwarder_version }}
+preinstalled_version={{ preinstalled_splunk_heavy_forwarder_version }}
 
 [splunk_universal_forwarder]
-version={{ splunk_universal_forwarder_version }}
-
-[vector]
-version={{ vector_version }}
+preinstalled_version={{ preinstalled_splunk_universal_forwarder_version }}
